--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,19 +20,20 @@
   <body>
     <div class="container">
       <div class="row-fluid">
-        <div class="col-xs-4 col-md-5 col-md-offset-2">
+        <div class="col-xs-2 col-md-7 col-md-offset-1">
           <h1>gh-x9</h1>
         </div>
-        <div class="col-xs-4 col-md-3 pull-left">
+        <div class="col-xs-3">
           <span id="label-atualizacao" class="pull-left">Atualizado em: <span id="timestamp-atualizacao"></span></span>
         </div>
       </div>
       <div class="row-fluid">
-        <div class="col-xs-6 col-md-8 col-md-offset-2 col-xs-offset-0">
+        <div class="col-xs-2 col-md-10 col-md-offset-1 col-xs-offset-0">
           <table id="tabela-commits" class="table table-striped table-hover table-condensed">
           <thead>
             <th></th>
             <th>Usuário</th>
+            <th>Última aparição</th>
             <th>Último commit</th>
           </thead>
           <tbody>
@@ -46,7 +47,7 @@
     <script type="text/javascript" charset="utf-8">
       $(function() {
         var isRunning = false;
-        var ROW_HTML = '<tr><td><img src={0}></td><td><a target=\'_blank\' href=\'{1}\'>{2}</a></td><td>{3}</td></tr>';
+        var ROW_HTML = '<tr><td><img src={0}></td><td><a target=\'_blank\' href=\'{1}\'>{2}</a></td><td>{3}</td> <td><a target=\'_blank\' href=\'{4}\'>{5}</a></td></tr>';
         var polling = function() {
           if (isRunning === false) {
             isRunning = true;
@@ -54,7 +55,7 @@
             .success(function(res) {
               var novoHTML = '';
               res.forEach(function(i) {
-                novoHTML += String.format(ROW_HTML, i.avatar_url, i.url_fork, i.usuario, i.ultimo_commit);
+                novoHTML += String.format(ROW_HTML, i.avatar_url, i.url_fork, i.usuario, i.ultimo_commit.timestamp, i.ultimo_commit.url, i.ultimo_commit.mensagem);
               });
               $('#tabela-commits > tbody').html(novoHTML);
               $('#timestamp-atualizacao').html(new Date().toLocaleString('pt-BR'));
