--- a/src/web/css/app.css
+++ b/src/web/css/app.css
@@ -1,12 +1,35 @@
+
+#logo {
+  height: 100;
+}
+
 #tabela-commits img {
   height: 60;
   width: 60;
 }
+
+
+
 .label-atualizacao {
   margin: 20 0;
   display: inline-block;
 }
 
-div.loading img {
-  height: 60px;
+.loading {
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 3px;
+  border: 2px solid steelblue;
+}
+
+  .loading img {
+    height: 30px;
+  }
+
+  .loading span {
+    color: steelblue;
+  }
+
+.avatar {
+  border-radius: 5px;
 }
