--- a/src/web/views/index.html
+++ b/src/web/views/index.html
@@ -9,71 +9,75 @@
     <link rel="icon" href="resources/img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="css/app.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.custom.min.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/app.min.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body ng-controller="MainCtrl" ng-init="start()">
 
-    <div class="container">
 
-      <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-7">
-          <div class="row">
-              <h1><img src="resources/img/github-megaman.jpg" alt="gh-x9" id="logo" /> gh-x9</h1>
+
+    <header>
+      <div class="container-fluid">
+        <div class="row header">
+          <div class="col-xs-6 col-sm-6 col-md-5 col-lg-4 col-md-offset-1 col-lg-offset-2 text-left">
+            <img src="resources/img/github-megaman.jpg" alt="gh-x9" id="logo" />
           </div>
-
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-5 text-right">
-          <span class="label-atualizacao">Atualizado em: {{ lastUpdated }}</span>
+          <div class="col-xs-6 col-sm-6 col-md-5 col-lg-4 text-right">
+            <span class="label-atualizacao">Atualizado em: {{ lastUpdated }}</span>
+          </div>
         </div>
       </div>
+    </header>
 
-      <div class="row repositories">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-9 col-lg-10 text-left">
-                  <strong>Repositórios</strong>
-                </div>
-                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 text-center">
-                  <div class="loading" ng-show="isRunning">
-                    <img src="resources/img/megaman.gif" alt="carregando..." />
-                    <span>Carregando</span>
-                  </div>
-                </div>
+    <section id="container-repositorios">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+            <div class="panel panel-default repositories">
+              <div class="panel-heading">
+                Últimos Commits
               </div>
+              <div class="loading text-right" ng-show="isRunning">
+                  <img src="resources/img/megaman.gif" alt="carregando..." />
+                  <span>Carregando</span>
+              </div>
+              <table id="tabela-commits" class="table table-striped table-hover table-condensed">
+                <thead>
+                  <th></th>
+                  <th>Usuário</th>
+                  <th>Última aparição</th>
+                  <th>Commits</th>
+                </thead>
+                <tbody>
+                  <tr ng-repeat="commit in commits" ng-class="{ 'danger': commit.requer_atencao }" >
+                    <td>
+                      <img ng-src="{{ commit.avatar_url }}" class="avatar">
+                    </td>
+                    <td>
+                      <a target='_blank' href='{{ commit.url_fork }}'>{{ commit.usuario }}</a>
+                    </td>
+                    <td>
+                      {{ commit.ultimo_commit.timestamp }}
+                    </td>
+                    <td>
+                      Último Commit: <a target='_blank' href='{{ commit.ultimo_commit.url }}'>{{ commit.ultimo_commit.mensagem }}</a>
+                      <br />
+                      <span class="commits-anteriores">
+                        Commits Anteriores:
+                        <ul>
+                          <li ng-repeat="outroCommit in commit.commits_anteriores"><a target='_blank' href='{{ outroCommit.ultimo_commit.url }}'>{{ outroCommit.mensagem }}</a></li>
+                        </ul>
+                      </span>
+                    </td>
+                  </tr>
+                </tbody>
+            </table>
             </div>
-            <table id="tabela-commits" class="table table-striped table-hover table-condensed">
-              <thead>
-                <th></th>
-                <th>Usuário</th>
-                <th>Última aparição</th>
-                <th>Último commit</th>
-              </thead>
-              <tbody>
-                <tr ng-repeat="commit in lastCommits" ng-class="{ 'danger': commit.requer_atencao }" >
-                  <td>
-                    <img ng-src="{{ commit.avatar_url }}" class="avatar">
-                  </td>
-                  <td>
-                    <a target='_blank' href='{{ commit.url_fork }}'>{{ commit.usuario }}</a>
-                  </td>
-                  <td>
-                    {{ commit.ultimo_commit.timestamp }}
-                  </td>
-                  <td>
-                    <a target='_blank' href='{{ commit.ultimo_commit.url }}'>{{ commit.ultimo_commit.mensagem }}</a>
-                  </td>
-                </tr>
-              </tbody>
-          </table>
-          </div>
 
+          </div>
         </div>
       </div>
-    </div>
-
+    </section>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
