feat(express, layout): inclusão do Express para engine de web server. Melhorias de layout.

--- a/src/web/css/app.scss
+++ b/src/web/css/app.scss
@@ -68,3 +68,17 @@ header {
     }
   }
 }
+
+#error {
+  background-color: red;
+  color: white;
+  padding: 10px;
+
+  i {
+    font-size: 50px;
+  }
+
+  .error-desc {
+    font-style: italic;
+  }
+}
