--- a/src/web/views/index.html
+++ b/src/web/views/index.html
@@ -9,25 +9,42 @@
     <link rel="icon" href="resources/img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" charset="utf-8">
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css" charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.custom.min.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/app.min.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body ng-controller="MainCtrl" ng-init="start()">
 
-
-
     <header>
       <div class="container-fluid">
         <div class="row header">
-          <div class="col-xs-6 col-sm-6 col-md-5 col-lg-4 col-md-offset-1 col-lg-offset-2 text-left">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2 col-md-offset-1 col-lg-offset-2 text-left">
             <img src="resources/img/github-megaman.jpg" alt="gh-x9" id="logo" />
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-5 col-lg-4 text-right">
+          <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3 text-center">
+            <h1>GH-X9</h1>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-5 col-lg-3 text-right">
             <span class="label-atualizacao">Atualizado em: {{ lastUpdated }}</span>
           </div>
         </div>
       </div>
     </header>
+
+    <section id="error" ng-show="error">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-2 col-md-1 col-lg-1 col-md-offset-1 col-lg-offset-2">
+            <i class="fa fa-exclamation-triangle"></i>
+          </div>
+          <div class="col-xs-12 col-sm-10 col-md-9 col-lg-7">
+            <strong>Danger</strong><br />
+            <span class="error-desc">{{ error }}</span>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="container-repositorios">
       <div class="container-fluid">
@@ -49,7 +66,7 @@
                   <th>Commits</th>
                 </thead>
                 <tbody>
-                  <tr ng-repeat="commit in commits" ng-class="{ 'danger': commit.requer_atencao }" >
+                  <tr ng-repeat="commit in commits" ng-class="{ 'danger': commit.requer_atencao }" class="animated fadeInUp" >
                     <td>
                       <img ng-src="{{ commit.avatar_url }}" class="avatar">
                     </td>
