--- a/src/web/views/index.html
+++ b/src/web/views/index.html
@@ -35,12 +35,12 @@
     <section id="error" ng-show="error">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-sm-2 col-md-1 col-lg-1 col-md-offset-1 col-lg-offset-2">
+          <div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 col-md-offset-1 col-lg-offset-2">
             <i class="fa fa-exclamation-triangle"></i>
           </div>
-          <div class="col-xs-12 col-sm-10 col-md-9 col-lg-7">
-            <strong>Danger</strong><br />
-            <span class="error-desc">{{ error }}</span>
+          <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+            <strong>Error!</strong><br />
+            <span class="error-desc">{{ error.message }}</span>
           </div>
         </div>
       </div>
