--- a/src/web/views/home.html
+++ b/src/web/views/home.html
@@ -25,11 +25,8 @@
           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2 col-md-offset-1 col-lg-offset-2 text-left">
             <img src="resources/img/github-megaman.jpg" alt="gh-x9" id="logo" />
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3 text-center">
+          <div class="col-xs-8 col-sm-8 col-md-7 col-lg-8 text-center">
             <h1>GH-X9</h1>
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-5 col-lg-3 text-right">
-            <span class="label-atualizacao">Atualizado em: {{ lastUpdated }}</span>
           </div>
         </div>
       </div>
@@ -39,11 +36,14 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 col-md-offset-1 col-lg-offset-2">
-            <i class="fa fa-exclamation-triangle"></i>
+            <i class="fa fa-exclamation-triangle" id="error-icon"></i>
           </div>
           <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
             <strong>Error!</strong><br />
-            <span class="error-desc">{{ error.message }}</span>
+            <span class="error-desc">{{ error.message }}</span> <br />
+            <a href="/github-auth" class="btn btn-default" ng-show="error.require_login">
+              <i class="fa fa-github"></i> Efetuar login no Github
+            </a>
           </div>
         </div>
       </div>
@@ -55,7 +55,15 @@
           <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
             <div class="panel panel-default repositories">
               <div class="panel-heading">
-                Últimos Commits
+                <div class="row">
+                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-left">
+                    Últimos Commits
+                  </div>
+                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right">
+                    Atualizado em: {{ lastUpdated }}
+                  </div>
+                </div>
+
               </div>
               <div class="loading text-right" ng-show="isRunning">
                   <img src="resources/img/megaman.gif" alt="carregando..." />
