--- a/src/views/index.html
+++ b/src/views/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script src="String.js"></script>
     <script type="text/javascript" charset="utf-8">
       $(function() {
