--- a/src/web/views/home.html
+++ b/src/web/views/home.html
@@ -18,11 +18,11 @@
 
     <header>
       <a href="https://github.com/bernardobrezende/gh-x9" target="_blank">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
+        <img style="position: absolute; top: -7px; right: -6px; border: 0; z-index: 100;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
       </a>
       <div class="container-fluid">
         <div class="row header">
-          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2 col-md-offset-1 col-lg-offset-2 text-left">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2 text-left">
             <img src="resources/img/github-megaman.jpg" alt="gh-x9" id="logo" />
           </div>
           <div class="col-xs-8 col-sm-8 col-md-7 col-lg-8 text-center">
@@ -52,32 +52,32 @@
     <section id="container-repositorios">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="panel panel-default repositories">
               <div class="panel-heading">
                 <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-left">
-                    Últimos Commits
+                  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-left">
+                    Timeline
                   </div>
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right">
+                  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <div class="loading text-center" ng-show="isRunning">
+                      <img src="resources/img/megaman.gif" alt="carregando..." />
+                    </div>
+                  </div>
+                  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-right">
                     Atualizado em: {{ lastUpdated }}
                   </div>
                 </div>
-
-              </div>
-              <div class="loading text-right" ng-show="isRunning">
-                  <img src="resources/img/megaman.gif" alt="carregando..." />
-                  <span>Carregando</span>
               </div>
               <table id="tabela-commits" class="table table-striped table-hover table-condensed">
                 <thead>
                   <th></th>
                   <th>Usuário</th>
-                  <th>Última aparição</th>
-                  <th>Commits</th>
+                  <th class="col-md-2 col-sm-3">Última aparição</th>
+                  <th class="col-md-8 col-sm-7">Commits</th>
                 </thead>
                 <tbody>
-                  <tr ng-repeat="rep in repositories" ng-class="{ 'danger': rep.warning }" class="animated fadeInUp" >
+                  <tr ng-repeat="rep in repositories" ng-class="{ 'danger': rep.warning }" class="animated bounceIn" >
                     <td>
                       <img ng-src="{{ rep.avatar_url }}" class="avatar">
                     </td>
@@ -110,6 +110,7 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="String.js"></script>
     <script src="js/app.js"></script>
 
   </body>
