refactor(commits): calcular métricas de forma relativamente dinâmica.

--- a/src/web/views/home.html
+++ b/src/web/views/home.html
@@ -91,8 +91,8 @@
                       <span class="commits-anteriores">
                         Últimos 30 commits
                         <ul>
-                          <li>Feature: {{ rep.commits_stats.features }}</li>
-                          <li>Fix: {{ rep.commits_stats.fixes }}</li>
+                          <li>Feature: {{ rep.commits_stats.feat }}</li>
+                          <li>Fix: {{ rep.commits_stats.fix }}</li>
                           <li>Refactory: {{ rep.commits_stats.refactor }}</li>
                           <li>Merge: {{ rep.commits_stats.merge }}</li>
                           <li>Test: {{ rep.commits_stats.test }}</li>
