--- a/src/web/views/home.html
+++ b/src/web/views/home.html
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                   <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-right">
-                    Atualizado em: {{ lastUpdated }}
+                    Atualizado em: {{ lastUpdated | date:'dd/MM/yyyy hh:mm' }}
                   </div>
                 </div>
               </div>
