--- a/src/web/views/home.html
+++ b/src/web/views/home.html
@@ -41,7 +41,7 @@
           <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
             <strong>Error!</strong><br />
             <span class="error-desc">{{ error.message }}</span> <br />
-            <a href="/github-auth" class="btn btn-default" ng-show="error.require_login">
+            <a href="/auth/go-to-github" class="btn btn-default" ng-show="error.require_login">
               <i class="fa fa-github"></i> Efetuar login no Github
             </a>
           </div>
